[gd_scene load_steps=4 format=3 uid="uid://ce240gm6arbmj"]

[ext_resource type="Script" path="res://scripts/order_ticket.gd" id="1_gvpyh"]
[ext_resource type="FontFile" uid="uid://dqfmsx57swhle" path="res://assets/IndieFlower-Regular.ttf" id="2_biiei"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgj04"]
bg_color = Color(0.933333, 0.921569, 0.886275, 0.627451)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 4.0

[node name="OrderTicket" type="Panel"]
offset_left = 146.0
offset_top = 72.0
offset_right = 288.0
offset_bottom = 344.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vgj04")
script = ExtResource("1_gvpyh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 142.0
offset_bottom = 272.0

[node name="BunType" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_biiei")
vertical_alignment = 1

[node name="SausageType" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_biiei")
vertical_alignment = 1

[node name="Toppings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Side" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_biiei")
vertical_alignment = 1

[node name="HideTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
